# text4rec

./: .deepsource.toml  .gitignore  README.md  current_run.yaml  loggers.py  main.py  make_dashboard.py  make_dashboard.sh  options.py  pyproject.toml  recommend.py  sample.txt  templates.py  utils.py
.devcontainer/: Dockerfile
cmd/: debug.sh  experiment.sh
dataloaders/: __init__.py  base.py  bert.py  bertemb.py  sasrec.py
dataloaders/negative_samplers/: random.py
datasets/: __init__.py  amazon.py  base.py  ml_1m.py  ml_20m.py  utils.py
env_shell/vm_hosting_sh/: docker_build.sh  get_gemini.sh  install_nvidia_toolkit.sh  start_container.sh  stop_ccontainer.sh
models/: __init__.py  bert.py  bertemb.py  sasrec.py
models/bert_modules/: bert.py  bertemb.py
params/: b4r.yaml  default.yaml  default2.yaml  original_b4r_same_sampling.yaml  sasrec.yaml  t4r.yaml
sandbox/: analyze_dataset.py  analyze_metadata.py  analyze_results.py  check_amazon.py  check_item_text.py  check_movielens.py  check_text_coverage.py  generate_embeddings.py  run_and_log.sh  test_amazon_dataset.py  test_ml1m_dataset.py
test/: emb_b4r.sh  original_b4r.sh  original_b4r_same_sampling.sh  recommend_from_text.sh  run_experiments.py
trainers/: __init__.py  base.py  bert.py  sasrec.py
